fix: adding a z-index fix to the underlying text in the hero section and making it non-selectable

--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -11,6 +11,8 @@
   justify-content: flex-start;
   margin: 0 auto;
   width: min(100% - 0rem, 1180px);
+  position: relative;
+  z-index: 2;
 }
 
 .hero_container {
@@ -46,4 +48,7 @@
   font-weight: bold;
   margin-top: -18.5rem;
   margin-left: 3rem;
+  position: relative;
+  z-index: -1;
+  user-select: none;
 }
